@@ -67,6 +67,8 @@ Now, open a new search connection - we can see the document:
 
 >>> q = sconn.query_parse('document')
 >>> results = sconn.search(q, 0, 30)
+>>> len(results)
+30
 >>> [result.id for result in results]
 ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'a', 'b', 'c', 'd', 'e', 'f', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '1a', '1b', '1c', '1d']
 
