@@ -1,3 +1,10 @@
+Mon Oct 01 15:23:11 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Add a __len__() method for
+	  SearchResults().
+	* xappy/searchconnection_doctest1.txt,
+	  xappy/searchconnection_doctest2.txt: Test it
+
 Mon Oct 01 14:23:22 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Add SearchConnection.query_multweight,
